<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_thong_ke"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/outline_category_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/outline_apparel_24"
            android:title="@string/menu_product" />

        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/outline_people_24"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/outline_box_24"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_orderHistory"
            android:icon="@drawable/outline_deployed_code_history_24"
            android:title="@string/menu_orderHistory" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/outline_account_box_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/outline_bar_chart_24"
            android:title="@string/menu_chart" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="Đăng xuất" />
    </group>
</menu>